# sdp-metadata-schema

./: .gitignore  README.md  genmeta_schema.json  pyproject.toml  requirements.txt  update_versions.py
json_examples/: README.md
json_examples/antibody/: antibody_registry.json
json_examples/cell_line/: HeLa.json  MCF-7.json
json_examples/crispr_knockout/: GCSNK1A1_3.json  GCTNNB1_24.json
json_examples/dataset/: README.md  dataset.json
json_examples/document/: document.json
json_examples/gene/: BRCA1.json  CDK9.json
json_examples/publication/: publication_collection.json
json_examples/signature/: LINCS Level 5 Signature.json  LSM-3716 LINCS L1000 Fusion Landmark Genes.json  LSM-43277 LINCS L1000 TCS Landmark Genes.json
json_examples/small_molecule/: menadione.json  sunitinib.json
json_schemas/: README.md
json_schemas/batch/: batch-layoutDetails.json  batch-layoutList.json  batch-uiSchema.json  batch.json  cell_line_batch-uiSchema.json  cell_line_batch.json  cell_line_batch.py  cell_line_batch_pac3r.json  small_molecule_batch-uiSchema.json  small_molecule_batch.json  small_molecule_batch.py
json_schemas/batch_pac3r/: cell_line_batch.json  cell_line_batch_pac3r-uiSchema.json  cell_line_batch_pac3r.json
json_schemas/cell-line/: cell-line.json
json_schemas/compound/: compound.json
json_schemas/dataset/: README.md  dataset-layoutDetails.json  dataset-layoutList.json  dataset-uiSchema.json  dataset.json  dataset_RNA-seq.json
json_schemas/document/: document.json
json_schemas/gene/: gene-layoutDetails.json
json_schemas/registry/: small_molecule_gen_schema.py
json_schemas/sample/: sample-layoutDetails.json  sample-layoutList.json  sample-uiSchema.json  sample.json  sample.py  sample_RNA-seq.json  sample_scRNA-seq.json  scratch.json
json_schemas/signature/: signature-layout-by-id.json  (+7 more)
pydantic/: TestModel_schema.json  antibody_registry.py  cellLine.csv  cellLine.json  cellLine.py  cellLineAlternate.json  cell_line_batch.json  cell_line_batch.py  cell_line_registry.py  crispr_knockout_registry.py  disease_registry.py  dynamic.py  example.py  file.json  gene_registry.py  genmeta v2.py  genmeta.py  genmeta_schema v2.json  genmeta_schema.json  import.py  import_csv.py  import_fairdb.py  language.json  language.py  main.py  metadata-v0.1.yaml  metadata-v0.2.yaml  metadata_graph_model.json  metadata_loader.py  model.json  model.py  models.py  protein_registry.py  publication_registry.py  randtree.py  sample.py  settings.py  signature.py  signature_TCS.py  signature_registry.py  (+7 more)
(+47 files in other folders)
