[tool.poetry]
name = "sdp-metadata-schema"
version = "0.1.0"
description = ""
authors = ["Michael Sinclair <m.sinclair3@med.miami.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.2.1"
sqlmodel = "^0.0.16"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.9.0"
bandit = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
